logs/dag_id=RestCountries/run_id=manual__2024-05-22T08:14:25.886667+00:00/task_id=load_countries_info/attempt=1.log
[2024-05-22T08:14:58.528+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:14:25.886667+00:00 [queued]>
[2024-05-22T08:14:58.532+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:14:25.886667+00:00 [queued]>
[2024-05-22T08:14:58.533+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2024-05-22T08:14:58.538+0000] {taskinstance.py:1382} INFO - Executing <Task(_PythonDecoratedOperator): load_countries_info> on 2024-05-22 08:14:25.886667+00:00
[2024-05-22T08:14:58.541+0000] {standard_task_runner.py:57} INFO - Started process 3629 to run task
[2024-05-22T08:14:58.543+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'RestCountries', 'load_countries_info', 'manual__2024-05-22T08:14:25.886667+00:00', '--job-id', '29', '--raw', '--subdir', 'DAGS_FOLDER/RestCountries.py', '--cfg-path', '/tmp/tmp94fgcx8j']
[2024-05-22T08:14:58.545+0000] {standard_task_runner.py:85} INFO - Job 29: Subtask load_countries_info
[2024-05-22T08:14:58.570+0000] {task_command.py:416} INFO - Running <TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:14:25.886667+00:00 [running]> on host b8721ae4b73c
[2024-05-22T08:14:58.610+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='RestCountries' AIRFLOW_CTX_TASK_ID='load_countries_info' AIRFLOW_CTX_EXECUTION_DATE='2024-05-22T08:14:25.886667+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-22T08:14:25.886667+00:00'
[2024-05-22T08:14:58.611+0000] {RestCountries.py:33} INFO - load countries info
[2024-05-22T08:14:58.615+0000] {base.py:73} INFO - Using connection ID 'redshift_dev_db' for task execution.
[2024-05-22T08:14:58.849+0000] {logging_mixin.py:154} INFO - syntax error at or near "of"
LINE 1: ...INTO kyg8821.rest_countries_info VALUES (Republic of Lithuan...
                                                             ^
[2024-05-22T08:14:58.860+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 221, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/RestCountries.py", line 47, in load_countries_info
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "of"
LINE 1: ...INTO kyg8821.rest_countries_info VALUES (Republic of Lithuan...
                                                             ^

[2024-05-22T08:14:58.868+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=RestCountries, task_id=load_countries_info, execution_date=20240522T081425, start_date=20240522T081458, end_date=20240522T081458
[2024-05-22T08:14:58.874+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 29 for task load_countries_info (syntax error at or near "of"
LINE 1: ...INTO kyg8821.rest_countries_info VALUES (Republic of Lithuan...
                                                             ^
; 3629)
[2024-05-22T08:14:58.889+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-05-22T08:14:58.900+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
